# screen-recall

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: capture_perf.rs  commands.rs  config.rs  lib.rs  main.rs  state.rs  worker_activity.rs
apps/desktop/src-tauri/src/archive/: mod.rs
apps/desktop/src-tauri/src/capture/: mod.rs
apps/desktop/src-tauri/src/embed/: mod.rs
apps/desktop/src-tauri/src/llm/: mod.rs  prompts.rs
apps/desktop/src-tauri/src/ocr/: mod.rs
apps/desktop/src-tauri/src/search/: mod.rs
apps/desktop/src-tauri/src/store/: mod.rs  schema.sql
apps/desktop/src-tauri/src/util/: active_window.rs  disk.rs  log_reader.rs  mod.rs  monitor_names.rs  paths.rs  perf_log.rs  process.rs  process_log.rs  reveal_in_folder.rs  tesseract.rs  workstation_lock.rs
apps/desktop/src/lib/: api.ts  chatStorage.ts  format.ts  frameWindow.ts  staticHeld.ts
apps/desktop/src/lib/components/: ContextMenu.tsx  ImageViewer.tsx  useEscape.ts
apps/desktop/src/routes/: Chat.tsx  Diagnostics.tsx  FirstRun.tsx  FrameWindow.tsx  Search.tsx  Settings.tsx  Timeline.tsx
docs/: plan-adaptive-camera-dedupe.md
scripts/: README.md  setup-windows.ps1
